# m3dc1_scorec

./: CMakeLists.txt  Makefile.am  README  config.sh  configure.ac  example_config.sh  m3dc1_scorecConfig.cmake.in  sunfire-meshgen-config.sh
api/: m3dc1_scorec.cc  m3dc1_scorec.h  name_convert.h
cmake/: FindHdf5.cmake  FindPetsc.cmake  FindScorec.cmake  FindSimmetrix.cmake  FindTrilinos.cmake  cori-FindPetsc.cmake  edison-FindTrilinos.cmake  libHdf5.pc.in  libPetsc.pc.in  libScorec.pc.in  libSimmetrix.pc.in
config-files/: babbage-real-config.sh  config.sh  core-babbage-config.sh  core-edison-config.sh  core-hopper-cray-config.sh  cori-real-config.sh  edison-complex-config.sh  edison-real-config.sh  hopper-complex-config.sh  hopper-real-config.sh  trilinos-edison-real-config.sh  trilinos-portalr6-real-config.sh
doc/: m3dc1-bc.tex  m3dc1-scorec-api.tex  m3dc1-scorec.tex  m3dc1-scorec2.tex  reference.bib
fortran/: c1_12_element.F90  explicit_element.F90  explicit_element_interface.F90
include/: BSpline.h  CMODGeoExpression.h  Expression.h  PolyNomial.h  ReducedQuintic.h  ReducedQuinticExplicit.h  ReducedQuinticImplicit.h  m3dc1_field.h  m3dc1_ghost.h  m3dc1_ls.h  m3dc1_matrix.h  m3dc1_mesh.h  m3dc1_model.h  m3dc1_sizeField.h  m3dc1_slnTransfer.h  slntransferUtil.h
scorec_build/: core_config.avatar.sh  core_config.dominion.sh  core_config.sh  m3dc1_scorec_config.avatar.sh  m3dc1_scorec_config.dominion.sh  m3dc1_scorec_config.sh  metis_config.sh  parmetis_config.sh  petsc_config.sh  setup.avatar.sh  setup.dominion.sh  setup.sh  tpl_build.txt  zoltan_config.sh
src/: BSpline.cc  CMODGeoExpression.cc  Expression.cc  PolyNomial.cc  ReducedQuinticExplicit.cc  ReducedQuinticImplicit.cc  m3dc1_ghost.cc  m3dc1_ls.cc  m3dc1_matrix.cc  m3dc1_mesh.cc  m3dc1_model.cc  m3dc1_sizeField.cc  m3dc1_slnTransfer.cc  slntransferUtil.cc
test/: AnalyticModel
test/12K-4part/: part0.smb  part1.smb  part2.smb  part3.smb
test/adapt/: AnalyticModel  main.cc
test/adapt/2/: meshPsi0.smb  meshPsi1.smb
test/adapt/4/: meshPsi0.smb  meshPsi1.smb  meshPsi2.smb  meshPsi3.smb
test/compareField/: compile_tmp.sh  input  main.cc
test/convert2smb/: compile_tmp.sh  main.cc
test/convert_polar/: POLAR  main.cc
test/create_smb/: AnalyticModel  create_smb.cc  seed0.smb  split_smb.cc
test/epetra/: README  main.cc
test/ghosting/: main.cc
test/meshgen/: AnalyticModel  coarseNSTX  input  linear_pts  polyNomial
test/nate-32part/: diiid0.05.txt  mesh0.smb  mesh1.smb  mesh10.smb  mesh11.smb  mesh12.smb  mesh13.smb  mesh14.smb  mesh15.smb  mesh16.smb  mesh17.smb  mesh18.smb  mesh19.smb  mesh2.smb  mesh20.smb  mesh21.smb  mesh22.smb  mesh23.smb  mesh24.smb  mesh25.smb  mesh26.smb  mesh27.smb  mesh28.smb  mesh29.smb  mesh3.smb  mesh30.smb  mesh31.smb  mesh4.smb  mesh5.smb  mesh6.smb  mesh7.smb  mesh8.smb  mesh9.smb
test/omega_h/: main.cc
test/solver/: README  main.cc
test/sum_vec_planes/: compile_tmp.sh  main.cc
